# eth-wallet-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
src/: erc20.json  main.rs
