[package]
name = "eth-wallet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = "2.0"
tokio = { version = "1.0", features = ["full"] }
tabled = "0.15"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
